# FoveaCamApp

./: .editorconfig  .gitignore  AGENTS.md  compiledb.cjs  package.json
.github/workflows/: docs.yml
app/: electron-builder.yml  index.html  package.json  tsconfig.json  tsconfig.node.json  types.d.ts  vite.config.ts  vitest.config.ts  vitest.soak.config.ts
app/electron/: bridge.ts  crash-report.ts  electron-env.d.ts  log-ring.ts  main.ts  open-file-server.ts  orchestrator-exit.ts  orchestrator-instances.ts  preload-bridge.ts  preload-common.ts  preload-profiler.ts  preload-renderer.ts  preload-shm.ts  preload-viewer.ts  preload.ts  store-main.ts  store-migrate.ts  telecanvas-host.ts  telecanvas-manager.ts  telecanvas-server.ts  util.ts  viewer-engine.ts  window-manager.ts  window-manifest.ts
app/lib/: abortable.next.ts  abortable.ts  calibration-data.ts  calibration-overlay.ts  calibration-records.ts  calibration-visualizer.ts  camera-calibration.ts  camera-config.ts  camera-store.ts  camera.ts  coalesced-writer.ts  config-schema.ts  config.ts  controller-client.ts  controller-codec.ts  conversion.ts  coordinate-conversions.ts  element-size.ts  imgproc.ts  imm-predictor.ts  local.ts  marker-patterns.generated.ts  marker.ts  mat.ts  pid.ts  pointer-obscured.ts  projection-geom.ts  regression.ts  save-path.ts  serial.ts  stereo.ts  store-authority.ts  store-codec.ts  store-migrations.ts  store-patch.ts  store-proxy.ts  store.ts  swatch.ts  telecanvas.ts  trigger-sync.ts  (+5 more)
app/orchestrator/: actuation.ts  anaglyph-style.ts  anchor-node.ts  async-kcf.ts  calibration.ts  camera-trigger.ts  camera.ts  capture-helper.ts  capture-node.ts  clock-calibration.ts  compose-node.ts  composite-pipe.ts  compress-pipe.ts  controller-node.ts  controller.ts  diagnostics.ts  display-kernel.ts  display-transport.ts  fovea-pipeline.ts  frame-transport.ts  frame-worker.ts  hardware-gate.ts  (+42 more)
core/: CMakeLists.txt  Makefile  addon.cpp  index.cjs  index.d.ts  index.mjs  package.json
core/docs/: concurrency.md  formatting.md
core/include/: AsyncTask.h  CallbackSlot.h  Cleanup.h  CoreObject.h  Dispatcher.h  ImmResult.h  Iterator.h  Iterators.h  Pipe.h  PortPipe.h  ShmLayout.h  ShmRead.h  ShmRing.h  ShmWrite.h  ThreadMeter.h  Topology.h  TrackResult.h  Vision.h  VoltPair.h  napi-helper.h
core/include/utils/: deleter.h  napi-helper.h  pointer.h  stacktrace.h
core/lib/Aravis/: Camera.cpp  Camera.h  CaptureSink.cpp  CaptureSink.h  ClockCalibration.cpp  ClockCalibration.h  CompositeStream.cpp  CompositeStream.h  CompressStream.cpp  Conversions.cpp  ConverterStream.cpp  ConverterStream.h  Error.cpp  Error.h  FoveaStream.cpp  FoveaStream.h  Frame.cpp  Frame.h  HeatmapStream.cpp  HeatmapStream.h  Object.h  PairStream.cpp  PairStream.h  ParamRing.h  PixelFormat.cpp  PixelFormat.gen.h  PixelFormat.h  PixelFormat.ts  RawPipe.cpp  ScaleStream.cpp  ScaleStream.h  StereoStream.cpp  StereoStream.h  Stream.cpp  Stream.h  UndistortStream.cpp  UndistortStream.h  convert.h
core/lib/Record/: McapWriter.cpp  McapWriter.h  RecorderStream.cpp  RecorderStream.h
core/lib/Stream/: Stream.h  Stream@next.h  StreamSelfTest.cpp
core/lib/Threading/: FIFO.h  Guard.h  Leaky.h  Ring.h  exception.h
core/lib/USB/: device.cpp  device.h  serial_device.cpp  serial_device.h
core/lib/utils/: CrashHandler.cpp  debug.cpp  debug.h  error.h  map-set.h  pointer.h  ref-count.h  string.h  thread.h
core/reader/: ShmReaderAddon.cpp
core/scripts/: FindAravis.cmake  FindLZ4.cmake  FindLibUSB.cmake  code-gen.cjs  decode-serial-trace.cjs  env.cjs  make.cjs
core/scripts/fixtures/: serial-trace.fixture
core/src/: ArUcoDetector.cpp  Camera.cpp  ComposeStream.cpp  Compression.cpp  Controller.cpp  Dispatcher.cpp  Frame.cpp  Geometry.cpp  ImmPredictor.cpp  Iterators.cpp  Log.cpp  MarkerDetector.cpp  OpenCV.cpp  Pipe.cpp  PortPipe.cpp  Protocol.cpp  Record.cpp  Regression.cpp  Serial.cpp  ShmRead.cpp  ShmRing.cpp  ShmWrite.cpp  Stream.cpp  ThreadMeter.cpp  Topology.cpp  Tracker.cpp  Vision.cpp  napi-helper.cpp
core/test/: 00-load-module.ts  01-camera-capture.ts  01-frame-grab.ts  02-serial-protocol.ts  03-ArUco-detector.ts  04-ArUco-detector-stream.ts  05-calibrate-camera.ts  06-projection.ts  07-regression.ts  08-shm-ring.ts  09-pipe.ts  10-frame-result.ts  10-pipe-thread-meter.ts  11-capture-pipe.ts  11-pipe-lifecycle.ts  12-kcf-tracker.ts  13-worker-pipe.ts  14-reader-context-safety.ts  15-fanout.ts  16-shm-writer-context-safety.ts  17-dispatcher-cleanup.ts  18-undistort-pipe.ts  20-fovea-pipe.ts  21-multi-kcf.ts  22-brick-chain.ts  23-topology-report.ts  24-clock-calibration.ts  25-scale-pipe.ts  26-stereo-heatmap-pipe.ts  27-composite-pipe.ts  28-fifo-pipe.ts  29-raw-pipe.ts  30-raw12p-pipe.ts  31-ring-v5-payload-bytes.ts  32-compress-pipe.ts  33-pair-pipe.ts  34-stereo-paired.ts  35-pipe-regate.ts  36-stream-close-deadlock.ts  37-bayer-channel-order.ts  (+16 more)
docs/: README.md  package-lock.json  package.json
firmware/: Makefile  platformio.ini
lib/: README.md  convert.h  crash.h  pointer.h  type_name.h
pyfcap/: .gitignore  README.md  pyproject.toml
pyfcap/src/fcap/: __init__.py  cli.py  convert.py  dtypes.py  fovea.py  legacy.py  pixel_formats.py  schema.py
pyfcap/tests/: test_cli.py  test_convert.py  test_dtypes.py  test_fovea.py  test_frame_extras.py  test_legacy.py  test_pixel_formats.py  test_streaming.py
pyfcap/tests/fixtures/: crash-truncated.fovea  tiny.fovea
pyfcap/tests/fixtures/legacy/: center.stream  left-fovea.stream  manifest.json  play
pyfovea/: README.md  pyproject.toml
pyfovea/src/pyfovea/: __init__.py  cli.py  convert.py  dtypes.py  fovea.py  legacy.py  pixel_formats.py
pyfovea/tests/: test_cli.py  test_convert.py  test_dtypes.py  test_fovea.py  test_frame_extras.py  test_legacy.py  test_pixel_formats.py  test_streaming.py
pyfovea/tests/fixtures/legacy/: __init__.py
scripts/: check-boundaries.mjs  dispatch-worker.sh
test/: CMakeLists.txt  Makefile  cobs.cpp  fw-sim-check.cpp  packed12.cpp
test/fw-sim/: hal.cpp  main.cpp  sim.h
test/fw-sim/shim/: Arduino.h  SPI.h  core_pins.h  pins_arduino.h
(+627 files in other folders)
